k8s/base/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: homepage-headers
  namespace: horizon-bot
spec:
  headers:
    customResponseHeaders:
      X-Frame-Options: ""
      Content-Security-Policy: "frame-ancestors https://top.gg"
