k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: horizon-bot-homepage
spec:
  replicas: 2
  selector:
    matchLabels:
      app: horizon-bot-homepage
  template:
    metadata:
      labels:
        app: horizon-bot-homepage
    spec:
      containers:
      - name: horizon-bot-homepage
        image: ghcr.io/horizon-tempvoice/horizon-homepage
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: 200m
            memory: 384Mi
          requests:
            cpu: 100m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10
