k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: horizon-bot-homepage
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    external-dns.alpha.kubernetes.io/target: lb-fsn-1.diamondforge.me
    traefik.ingress.kubernetes.io/router.middlewares: horizon-bot-homepage-headers@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - horizon-bot.me
    secretName: horizon-bot-homepage-tls
  rules:
  - host: horizon-bot.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: horizon-bot-homepage
            port:
              number: 80
